--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -30,8 +30,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/jsoneditor/dist/jsoneditor.min.css",
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
