--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -27,6 +27,7 @@
     "fabric": "^5.3.0",
     "flowbite": "^2.3.0",
     "form-data": "^4.0.0",
+    "jsoneditor": "^10.0.3",
     "lodash": "^4.17.21",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
@@ -39,6 +40,7 @@
     "@angular/compiler-cli": "^17.1.0",
     "@types/fabric": "^5.3.7",
     "@types/jasmine": "~5.1.0",
+    "@types/jsoneditor": "^9.9.5",
     "@types/lodash": "^4.17.4",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
